resolved overflow scroll problem

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -1,9 +1,18 @@
 @import '../sass/variables.scss';
-
+html{
+  overflow: hidden;
+}
 body{
   font-size: 6px;
   overflow: hidden;
   transition: ease-in-out 0.5s;
+  
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+.App {
   &.AboutMeShow{
     transform: translate(100vw, 0);
   }
@@ -16,13 +25,6 @@ body{
   &.ProjectsMeShow{
     transform: translate(0, -100vh);
   }
-}
-::-webkit-scrollbar {
-  display: none;
-}
-
-.App {
-  
   p{
     color: $fontcolor;
     font-size: $fontsmall;
